@@ -1,8 +1,8 @@
 **[Plugin] FuturePress EpubJSReader plugin for Sigil **
 
-Updated: June 13, 2021
+Updated: March 17, 2022
 
-Current Version: "0.4.0"
+Current Version: "0.5.0"
 
 This plugin implements an epub3 reader for the epub currently being edited in Sigil.
 It uses PyQt5 and PyQtWebengine to create a browser like main window and then loads
