@@ -23,6 +23,7 @@ PLUGIN_FILES = ['reader',
             'ChangeLog.txt',
             'epub_js_license.txt',
             'epubjs_README.md',
+            'plugin_utils.py',
             'plugin.py',
             'plugin.xml',
             'plugin.png',
